# formal_languages

./: README.md
formal_lang_practice/: CMakeLists.txt  description.txt  main.cpp  regular.cpp  regular.h  test_file.cpp
formal_lang_practice/google_test/: CMakeLists.txt
formal_lang_practice2/: CMakeLists.txt  Solution.cpp  Solution.h  main.cpp  main_test.cpp  second_test.cpp  test.txt
formal_lang_practice2/google_test/: CMakeLists.txt
